--- a/index.html
+++ b/index.html
@@ -179,8 +179,62 @@
                      </g>
                   </svg>
                </form>
+               <div class="header__user">
+                  <div class="header__user-img">
+                     <img src="asset/img/user.png" alt="user" />
+                  </div>
+                  <span class="header__user-name">Thomas</span>
+                  <img src="asset/img/chevron_down.svg" alt="chevron_down" />
+               </div>
+               <div class="header__notification">
+                  <img src="asset/img/Notification.svg" alt="notification" />
+               </div>
             </header>
-            <main class="main"></main>
+            <main class="main">
+               <div class="discover">
+                  <h1 class="discover__title">Discover</h1>
+                  <div class="discover__content">
+                     <div class="discover__item">
+                        <h3 class="discover__item-title">
+                           How to do Basic Jumping and how to landing safely
+                        </h3>
+                        <div class="discover__user">
+                           <div class="discover__user-img">
+                              <img src="asset/img/image3.png" alt="user" />
+                              <div>
+                                 <h5 class="discover__user-name">
+                                    Thomas Hope
+                                 </h5>
+                                 <div class="discover__view-time">
+                                    <span>53K views</span>
+                                    <span>2 weeks ago</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="discover__item">
+                        <h3 class="discover__item-title">
+                           How to do Basic Jumping and how to landing safely
+                        </h3>
+                        <div class="discover__user">
+                           <div class="discover__user-img">
+                              <img src="asset/img/image3.png" alt="user" />
+                              <div>
+                                 <h5 class="discover__user-name">
+                                    Thomas Hope
+                                 </h5>
+                                 <div class="discover__view-time">
+                                    <span>53K views</span>
+                                    <span>2 weeks ago</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </main>
          </div>
       </div>
       <script src="asset/js/app.js"></script>
