--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
       <!-- LINK CSS -->
       <link rel="stylesheet" href="asset/css/main.css" />
       <!-- LINK CSS -->
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+         crossorigin="anonymous"
+         referrerpolicy="no-referrer"
+      />
       <title></title>
    </head>
    <body>
@@ -201,33 +208,65 @@
                         <div class="discover__user">
                            <div class="discover__user-img">
                               <img src="asset/img/image3.png" alt="user" />
-                              <div>
-                                 <h5 class="discover__user-name">
-                                    Thomas Hope
-                                 </h5>
-                                 <div class="discover__view-time">
-                                    <span>53K views</span>
-                                    <span>2 weeks ago</span>
-                                 </div>
+                              <div class="tick">
+                                 <svg
+                                    width="7"
+                                    height="7"
+                                    viewBox="0 0 7 7"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                 >
+                                    <path
+                                       d="M1.17157 4.32843L2.58579 5.74264L5.41421 2.91421"
+                                       stroke="#0DAABC"
+                                       stroke-width="1.2"
+                                       stroke-linecap="round"
+                                       stroke-linejoin="round"
+                                    />
+                                 </svg>
+                              </div>
+                           </div>
+                           <div>
+                              <h5 class="discover__user-name">Thomas Hope</h5>
+                              <div class="discover__view-time">
+                                 <span>53K views</span>
+                                 <span></span>
+                                 <span>2 weeks ago</span>
                               </div>
                            </div>
                         </div>
                      </div>
                      <div class="discover__item">
                         <h3 class="discover__item-title">
-                           How to do Basic Jumping and how to landing safely
+                           Skateboard Tips You need to know
                         </h3>
                         <div class="discover__user">
                            <div class="discover__user-img">
-                              <img src="asset/img/image3.png" alt="user" />
-                              <div>
-                                 <h5 class="discover__user-name">
-                                    Thomas Hope
-                                 </h5>
-                                 <div class="discover__view-time">
-                                    <span>53K views</span>
-                                    <span>2 weeks ago</span>
-                                 </div>
+                              <img src="asset/img/image4.png" alt="user" />
+                              <div class="tick">
+                                 <svg
+                                    width="7"
+                                    height="7"
+                                    viewBox="0 0 7 7"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                 >
+                                    <path
+                                       d="M1.17157 4.32843L2.58579 5.74264L5.41421 2.91421"
+                                       stroke="#0DAABC"
+                                       stroke-width="1.2"
+                                       stroke-linecap="round"
+                                       stroke-linejoin="round"
+                                    />
+                                 </svg>
+                              </div>
+                           </div>
+                           <div>
+                              <h5 class="discover__user-name">Tony Andrew</h5>
+                              <div class="discover__view-time">
+                                 <span>53K views</span>
+                                 <span></span>
+                                 <span>2 weeks ago</span>
                               </div>
                            </div>
                         </div>
