--- a/index.html
+++ b/index.html
@@ -198,37 +198,24 @@
                </div>
             </header>
             <main class="main">
-               <div class="discover">
-                  <h1 class="discover__title">Discover</h1>
-                  <div class="discover__content">
-                     <div class="discover__item">
-                        <h3 class="discover__item-title">
+               <div class="blog">
+                  <h1 class="blog__heading">Discover</h1>
+                  <div class="blog__content">
+                     <div class="blog__item">
+                        <div class="time blog__item-time">7 min</div>
+                        <h3 class="blog__item-title">
                            How to do Basic Jumping and how to landing safely
                         </h3>
-                        <div class="discover__user">
-                           <div class="discover__user-img">
-                              <img src="asset/img/image3.png" alt="user" />
+                        <div class="blog__item-author">
+                           <div class="author-img">
+                              <img src="asset/img/image3.png" alt="author" />
                               <div class="tick">
-                                 <svg
-                                    width="7"
-                                    height="7"
-                                    viewBox="0 0 7 7"
-                                    fill="none"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                 >
-                                    <path
-                                       d="M1.17157 4.32843L2.58579 5.74264L5.41421 2.91421"
-                                       stroke="#0DAABC"
-                                       stroke-width="1.2"
-                                       stroke-linecap="round"
-                                       stroke-linejoin="round"
-                                    />
-                                 </svg>
+                                 <i class="fas fa-check"></i>
                               </div>
                            </div>
                            <div>
-                              <h5 class="discover__user-name">Thomas Hope</h5>
-                              <div class="discover__view-time">
+                              <h4 class="author-name">Thomas Hope</h4>
+                              <div class="view-time">
                                  <span>53K views</span>
                                  <span></span>
                                  <span>2 weeks ago</span>
@@ -236,34 +223,21 @@
                            </div>
                         </div>
                      </div>
-                     <div class="discover__item">
-                        <h3 class="discover__item-title">
+                     <div class="blog__item">
+                        <div class="time blog__item-time">7 min</div>
+                        <h3 class="blog__item-title">
                            Skateboard Tips You need to know
                         </h3>
-                        <div class="discover__user">
-                           <div class="discover__user-img">
-                              <img src="asset/img/image4.png" alt="user" />
+                        <div class="blog__item-author">
+                           <div class="author-img">
+                              <img src="asset/img/image3.png" alt="author" />
                               <div class="tick">
-                                 <svg
-                                    width="7"
-                                    height="7"
-                                    viewBox="0 0 7 7"
-                                    fill="none"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                 >
-                                    <path
-                                       d="M1.17157 4.32843L2.58579 5.74264L5.41421 2.91421"
-                                       stroke="#0DAABC"
-                                       stroke-width="1.2"
-                                       stroke-linecap="round"
-                                       stroke-linejoin="round"
-                                    />
-                                 </svg>
+                                 <i class="fas fa-check"></i>
                               </div>
                            </div>
                            <div>
-                              <h5 class="discover__user-name">Tony Andrew</h5>
-                              <div class="discover__view-time">
+                              <h4 class="author-name">Thomas Hope</h4>
+                              <div class="view-time">
                                  <span>53K views</span>
                                  <span></span>
                                  <span>2 weeks ago</span>
@@ -272,6 +246,147 @@
                         </div>
                      </div>
                   </div>
+               </div>
+               <div class="videos">
+                  <h2 class="videos__heading">Most Watched</h2>
+                  <ul class="videos__list">
+                     <li class="card">
+                        <div class="time card__time">7 min</div>
+                        <div class="card__top">
+                           <div class="video-wrapper">
+                              <video
+                                 src="asset/video/video.mp4"
+                                 loop
+                                 class="video"
+                                 muted
+                              ></video>
+                           </div>
+                           <div class="card__author">
+                              <div class="card__author-img">
+                                 <img src="asset/img/image5.png" alt="" />
+                                 <div class="card__author-tick">
+                                    <i class="fas fa-check"></i>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card__bottom">
+                           <div class="video-by">Andy William</div>
+                           <h3 class="card__title">
+                              Basic how to ride your skateboard comfortly
+                           </h3>
+                           <!-- <div> -->
+                           <div class="view-time card__view-time">
+                              <span>53K views</span>
+                              <span></span>
+                              <span>2 weeks ago</span>
+                           </div>
+                           <!-- </div> -->
+                        </div>
+                     </li>
+                     <li class="card">
+                        <div class="time card__time">7 min</div>
+                        <div class="card__top">
+                           <div class="video-wrapper">
+                              <video
+                                 src="asset/video/video1.mp4"
+                                 loop
+                                 class="video"
+                                 muted
+                              ></video>
+                           </div>
+                           <div class="card__author">
+                              <div class="card__author-img">
+                                 <img src="asset/img/image8.png" alt="" />
+                                 <div class="card__author-tick">
+                                    <i class="fas fa-check"></i>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card__bottom">
+                           <div class="video-by">Wijaya Abadi</div>
+                           <h3 class="card__title">
+                              Prepare for your first skateboard jump
+                           </h3>
+                           <!-- <div> -->
+                           <div class="view-time card__view-time">
+                              <span>53K views</span>
+                              <span></span>
+                              <span>2 weeks ago</span>
+                           </div>
+                           <!-- </div> -->
+                        </div>
+                     </li>
+                     <li class="card">
+                        <div class="time card__time">7 min</div>
+                        <div class="card__top">
+                           <div class="video-wrapper">
+                              <video
+                                 src="asset/video/video2.mp4"
+                                 loop
+                                 class="video"
+                                 muted
+                              ></video>
+                           </div>
+                           <div class="card__author">
+                              <div class="card__author-img">
+                                 <img src="asset/img/image6.png" alt="" />
+                                 <div class="card__author-tick">
+                                    <i class="fas fa-check"></i>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card__bottom">
+                           <div class="video-by">Budi Hakim</div>
+                           <h3 class="card__title">
+                              Tips to playing skateboard on the ramp
+                           </h3>
+                           <!-- <div> -->
+                           <div class="view-time card__view-time">
+                              <span>53K views</span>
+                              <span></span>
+                              <span>2 weeks ago</span>
+                           </div>
+                           <!-- </div> -->
+                        </div>
+                     </li>
+                     <li class="card">
+                        <div class="time card__time">7 min</div>
+                        <div class="card__top">
+                           <div class="video-wrapper">
+                              <video
+                                 src="asset/video/video3.mp4"
+                                 loop
+                                 class="video"
+                                 muted
+                              ></video>
+                           </div>
+                           <div class="card__author">
+                              <div class="card__author-img">
+                                 <img src="asset/img/image7.png" alt="" />
+                                 <div class="card__author-tick">
+                                    <i class="fas fa-check"></i>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="card__bottom">
+                           <div class="video-by">Johny Wise</div>
+                           <h3 class="card__title">
+                              Basic Equipment to play skateboard safely
+                           </h3>
+                           <!-- <div> -->
+                           <div class="view-time card__view-time">
+                              <span>53K views</span>
+                              <span></span>
+                              <span>2 weeks ago</span>
+                           </div>
+                           <!-- </div> -->
+                        </div>
+                     </li>
+                  </ul>
                </div>
             </main>
          </div>
