--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                            </svg>
                         </div>
 
-                        home
+                        <span>Discover</span>
                      </a>
                   </li>
                   <li class="sidebar__item">
@@ -50,7 +50,7 @@
                               ></path>
                            </svg>
                         </div>
-                        trending
+                        <span> trending </span>
                      </a>
                   </li>
                   <li class="sidebar__item">
@@ -62,7 +62,7 @@
                               ></path>
                            </svg>
                         </div>
-                        trending
+                        <span>Playlist</span>
                      </a>
                   </li>
                   <li class="sidebar__item">
@@ -76,7 +76,7 @@
                               ></path>
                            </svg>
                         </div>
-                        trending
+                        <span>Bookmark</span>
                      </a>
                   </li>
                   <li class="sidebar__item">
@@ -90,7 +90,7 @@
                               ></path>
                            </svg>
                         </div>
-                        trending
+                        <span>trending</span>
                      </a>
                   </li>
                </ul>
@@ -107,7 +107,7 @@
                               ></path>
                            </svg>
                         </div>
-                        home
+                        <span>Live Stream</span>
                      </a>
                   </li>
                   <li class="sidebar__item">
@@ -121,7 +121,7 @@
                               ></path>
                            </svg>
                         </div>
-                        trending
+                        <span>Tutorial</span>
                      </a>
                   </li>
                   <li class="sidebar__item">
@@ -135,7 +135,7 @@
                               ></path>
                            </svg>
                         </div>
-                        trending
+                        <span>Competition</span>
                      </a>
                   </li>
                   <li class="sidebar__item">
@@ -149,7 +149,7 @@
                               ></path>
                            </svg>
                         </div>
-                        trending
+                        <span>Community</span>
                      </a>
                   </li>
                </ul>
